--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-firebase/app": "^19.0.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
     "firebase": "^10.12.2",
     "mui-image": "^1.0.7",
     "react": "^18.2.0",
