--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "firebase": "^10.12.2",
     "mui-image": "^1.0.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.4",
     "react-datepicker": "^6.3.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
